--- a/Odin.Data/packages.config
+++ b/Odin.Data/packages.config
@@ -1,12 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.3.1" targetFramework="net461" />
   <package id="Bogus" version="17.0.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.5.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server" version="1.1.157.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server.Entity" version="1.1.157.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server.Tables" version="1.1.157.1" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Sendgrid" version="9.9.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.0.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net461" />
 </packages>
