--- a/Odin.IntegrationTests/packages.config
+++ b/Odin.IntegrationTests/packages.config
@@ -10,8 +10,14 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.5.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server" version="1.1.157.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server.Entity" version="1.1.157.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server.Tables" version="1.1.157.1" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net461" />
@@ -28,4 +34,5 @@
   <package id="NUnit" version="3.8.1" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net461" />
 </packages>
