--- a/Odin/packages.config
+++ b/Odin/packages.config
@@ -27,11 +27,17 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.5.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server" version="1.1.157.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server.Entity" version="1.1.157.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server.Tables" version="1.1.157.1" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
@@ -64,6 +70,7 @@
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="Sendgrid" version="9.9.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.0.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
