--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -538,6 +538,7 @@
     <Content Include="Content\Images\bg_gradient_login.png" />
     <Content Include="Content\Images\bg_image.png" />
     <Content Include="Content\Images\collapse.png" />
+    <Content Include="Content\Images\Desktop_ln_image_placeholder.png" />
     <Content Include="Content\Images\dwellworks_icon.png" />
     <Content Include="Content\Images\expand.png" />
     <Content Include="Content\Images\forgot_password.jpg" />
@@ -545,10 +546,17 @@
     <Content Include="Content\Images\icn_alert_circle.png" />
     <Content Include="Content\Images\icn_cal_B1.png" />
     <Content Include="Content\Images\icn_chat_B1.png" />
+    <Content Include="Content\Images\icn_details.png" />
     <Content Include="Content\Images\icn_down_arrow.png" />
+    <Content Include="Content\Images\icn_history.png" />
+    <Content Include="Content\Images\icn_intake.png" />
+    <Content Include="Content\Images\icn_internal_calendar.png" />
+    <Content Include="Content\Images\icn_internal_messages.png" />
     <Content Include="Content\Images\icn_person.png" />
     <Content Include="Content\Images\icn_profile_B1.png" />
+    <Content Include="Content\Images\icn_rentals.png" />
     <Content Include="Content\Images\icn_up_arrow.png" />
+    <Content Include="Content\Images\icn_up_sel_arrow.png" />
     <Content Include="Content\Images\ic_search.png" />
     <Content Include="Content\Images\user-placeholder.png" />
     <Content Include="Content\css\login.css">
