--- a/Odin.Tests/Odin.Tests.csproj
+++ b/Odin.Tests/Odin.Tests.csproj
@@ -156,8 +156,8 @@
     <Compile Include="Helpers\AccountHelperTests.cs" />
     <Compile Include="Helpers\DateHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Helpers\HTMLHelpersTests.cs" />
     <Compile Include="Views\Helpers\MockContext.cs" />
-    <Compile Include="Views\Helpers\UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
