--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -305,6 +305,10 @@
     <Compile Include="Persistence\Migrations\201710231718208_RemoveChildDeletedMapping.Designer.cs">
       <DependentUpon>201710231718208_RemoveChildDeletedMapping.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201710241711552_RemoveStringRentId.cs" />
+    <Compile Include="Persistence\Migrations\201710241711552_RemoveStringRentId.Designer.cs">
+      <DependentUpon>201710241711552_RemoveStringRentId.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\ServicesRepository.cs" />
@@ -417,6 +421,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201710231718208_RemoveChildDeletedMapping.resx">
       <DependentUpon>201710231718208_RemoveChildDeletedMapping.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201710241711552_RemoveStringRentId.resx">
+      <DependentUpon>201710241711552_RemoveStringRentId.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
