--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -334,6 +334,10 @@
     <Compile Include="Persistence\Migrations\201710241440161_OrderSchoolNFile.Designer.cs">
       <DependentUpon>201710241440161_OrderSchoolNFile.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201710251529590_MergeMattaBranch3.cs" />
+    <Compile Include="Persistence\Migrations\201710251529590_MergeMattaBranch3.Designer.cs">
+      <DependentUpon>201710251529590_MergeMattaBranch3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\PetsRepository.cs" />
@@ -465,6 +469,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201710241440161_OrderSchoolNFile.resx">
       <DependentUpon>201710241440161_OrderSchoolNFile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201710251529590_MergeMattaBranch3.resx">
+      <DependentUpon>201710251529590_MergeMattaBranch3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
