--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeFamilyDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeDestinationDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeOriginDto.cs" />
+    <Compile Include="Core\Dtos\OrdersTransfereeIntakeRentDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeRmcDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeServiceDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeServicesDto.cs" />
@@ -144,21 +145,28 @@
     <Compile Include="Core\Dtos\TransfereeIndexDto.cs" />
     <Compile Include="Core\Dtos\UserDto.cs" />
     <Compile Include="Core\Models\ApplicationUser.cs" />
+    <Compile Include="Core\Models\AreaType.cs" />
     <Compile Include="Core\Models\AzureTest.cs" />
+    <Compile Include="Core\Models\BrokerFeeType.cs" />
     <Compile Include="Core\Models\Child.cs" />
     <Compile Include="Core\Models\Consultant.cs" />
+    <Compile Include="Core\Models\DepositType.cs" />
     <Compile Include="Core\Models\ErrorResponse.cs" />
     <Compile Include="Core\Models\HousingType.cs" />
+    <Compile Include="Core\Models\Lease.cs" />
     <Compile Include="Core\Models\MobileTable.cs" />
+    <Compile Include="Core\Models\NumberOfBathroomsType.cs" />
     <Compile Include="Core\Models\Order.cs" />
     <Compile Include="Core\Models\Manager.cs" />
     <Compile Include="Core\Models\OwnershipType.cs" />
     <Compile Include="Core\Models\Pet.cs" />
     <Compile Include="Core\Models\Rent.cs" />
+    <Compile Include="Core\Models\SEDropDownType.cs" />
     <Compile Include="Core\Models\Service.cs" />
     <Compile Include="Core\Models\ServiceCategory.cs" />
     <Compile Include="Core\Models\ServiceType.cs" />
     <Compile Include="Core\Models\Transferee.cs" />
+    <Compile Include="Core\Models\TransportationType.cs" />
     <Compile Include="Core\Models\UserRoles.cs" />
     <Compile Include="Core\Repositories\IChildrenRepository.cs" />
     <Compile Include="Core\Repositories\IConsultantsRepository.cs" />
@@ -178,6 +186,7 @@
     <Compile Include="Persistence\ApplicationUserRepository.cs" />
     <Compile Include="Persistence\ChildrenRepository.cs" />
     <Compile Include="Persistence\ConsultantsRepository.cs" />
+    <Compile Include="Persistence\EntityConfigurations\LeaseConfiguration.cs" />
     <Compile Include="Persistence\EntityConfigurations\OrderConfiguration.cs" />
     <Compile Include="Persistence\EntityConfigurations\RentConfiguration.cs" />
     <Compile Include="Persistence\IApplicationDbContext.cs" />
@@ -338,9 +347,14 @@
     <Compile Include="Persistence\Migrations\201710251529590_MergeMattaBranch3.Designer.cs">
       <DependentUpon>201710251529590_MergeMattaBranch3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201710271554252_UpdatedFields.cs" />
+    <Compile Include="Persistence\Migrations\201710271554252_UpdatedFields.Designer.cs">
+      <DependentUpon>201710271554252_UpdatedFields.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\PetsRepository.cs" />
+    <Compile Include="Persistence\RentsRepository.cs" />
     <Compile Include="Persistence\ServicesRepository.cs" />
     <Compile Include="Persistence\ServiceTypesRepository.cs" />
     <Compile Include="Persistence\TransfereesRepository.cs" />
@@ -472,6 +486,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201710251529590_MergeMattaBranch3.resx">
       <DependentUpon>201710251529590_MergeMattaBranch3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201710271554252_UpdatedFields.resx">
+      <DependentUpon>201710271554252_UpdatedFields.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
