Adding Property model and migration

--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -399,6 +399,10 @@
     <Compile Include="Persistence\Migrations\201710312109349_MergeAddNewEtlFields.Designer.cs">
       <DependentUpon>201710312109349_MergeAddNewEtlFields.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201711011841252_AddPropertyModel.cs" />
+    <Compile Include="Persistence\Migrations\201711011841252_AddPropertyModel.Designer.cs">
+      <DependentUpon>201711011841252_AddPropertyModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\NumberOfBathroomsTypesRepository.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
@@ -563,6 +567,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201710312109349_MergeAddNewEtlFields.resx">
       <DependentUpon>201710312109349_MergeAddNewEtlFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201711011841252_AddPropertyModel.resx">
+      <DependentUpon>201711011841252_AddPropertyModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
